Fixes the bug: the section titles overlap the "user details" drawer

--- a/src/app/bots/faq-edit-add/faq-edit-add.component.scss
+++ b/src/app/bots/faq-edit-add/faq-edit-add.component.scss
@@ -73,13 +73,10 @@ textarea {
 }
 
 .faq-right-sidebar-link {
-  color:#0f62ff;
+  color: #0f62ff;
   cursor: pointer;
   text-decoration: underline;
 }
-
-
-
 
 // -------------------------
 // Placeholder cusrom color
@@ -103,31 +100,38 @@ textarea {
   font-weight: 200 !important;
 }
 
-.card_title__underlined {
-  text-transform: none;
-  color: #566787;
-  margin-bottom: 0px;
-  height: 40px !important;
-  position: relative;
-  font-family: Google Sans, sans-serif;
-  height: 30px;
-  font-size: 16px;
-  margin-top: 10px;
-}
+// .card_title__underlined {
+//   text-transform: none;
+//   color: #566787;
+//   margin-bottom: 0px;
+//   height: 40px !important;
+//   position: relative;
+//   font-family: Google Sans, sans-serif;
+//   height: 30px;
+//   font-size: 16px;
+//   margin-top: 10px;
+//   z-index: 0;
+// }
 
-.card_title__underline {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: -1px;
-  border-bottom: 2px solid $brand-primary;
-  z-index: 1;
-}
+// .card_title__underline {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   bottom: -1px;
+//   border-bottom: 3px solid $brand-primary;
+//   z-index: 1;
+// }
 
-.section-subtitle {
-  height: 20px;
-  border-top: 1px solid #ddd;
-  // width: calc((100% / 3) + 372px);
+// .section-subtitle {
+//   height: 20px;
+//   border-top: 1px solid #ddd;
+//   // width: calc((100% / 3) + 372px);
+// }
+
+@media (max-width: 768px) {
+  .div-spacer {
+    height: 90px !important;
+  }
 }
 
 .enable-webhook-description-wpr {
@@ -135,7 +139,6 @@ textarea {
   position: relative;
   top: -12px;
 }
-
 
 .enable-webhook-description {
   font-size: 14px;
@@ -198,5 +201,3 @@ textarea {
   right: 0px;
 }
 // --------- ./end new on-off btn logo ---------
-
-
